--- a/second_app/app/views/layouts/application.html.erb
+++ b/second_app/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <title>SecondApp</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+  <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/sandstone/bootstrap.min.css" rel="stylesheet" integrity="sha384-7MvlWCBuyFQHTibL0ta2jXuoCAaC8s2FIwWC/olSTVZ2OBod2DVHIXQcvUKdfJSA" crossorigin="anonymous">
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
